--- a/.project-settings.yml
+++ b/.project-settings.yml
@@ -1,9 +1,14 @@
-module-template: ! 'module MODULE_NAME where
-
-'
+module-template: ! "-----------------------------------------------------------------------------\n--
+  |\n-- Module      :  Data.TheBook.MODULE_NAME\n-- Copyright   :  (c) 2014, Jakub
+  Kozlowski\n-- License     :  MIT\n--\n-- Maintainer  :  mail@jakub-kozlowski.com\n--\n--
+  \n-----------------------------------------------------------------------------\nmodule
+  MODULE_NAME where\n"
 extensions: {}
-environment: default
+environment: ghc-7.8-unstable
 cabal-file: project.cabal
+hidden-packages: ''
 version: 1
-ghc-args: []
+extra-packages: ! 'Hackage: tasty-quickcheck 0.3.1'
+ghc-args:
+- -v
 excluded-modules: []
