--- a/.project-settings.yml
+++ b/.project-settings.yml
@@ -1,7 +1,6 @@
 module-template: ! "-----------------------------------------------------------------------------\n--
-  |\n-- Module      :  Data.TheBook.MODULE_NAME\n-- Copyright   :  (c) 2014, Jakub
-  Kozlowski\n-- License     :  MIT\n--\n-- Maintainer  :  mail@jakub-kozlowski.com\n--\n--
-  \n-----------------------------------------------------------------------------\nmodule
+  |\n-- Module      :  MODULE_NAME\n-- Copyright   :  (c) 2014, Jakub Kozlowski\n--
+  License     :  MIT\n--\n-- Maintainer  :  mail@jakub-kozlowski.com\n--\n-- \n-----------------------------------------------------------------------------\nmodule
   MODULE_NAME where\n"
 extensions: {}
 environment: ghc-7.8-unstable
