--- a/thebook.cabal
+++ b/thebook.cabal
@@ -14,17 +14,69 @@ maintainer:         mail@jakub-kozlowski.com
 
 build-type:         Simple
 cabal-version:      >= 1.18
-extra-source-files: --CHANGELOG.md
-                    --CONTRIBUTING.md
+extra-source-files: LICENCE
                     README.md
 
 source-repository head
-    location:
-        git://github.com/jkozlowski/thebook-haskell.git
-    type:
-        git
+  location:
+      git://github.com/jkozlowski/thebook-haskell.git
+  type:
+      git
 
 flag documentation
-    default:
-        False
+  default:
+      False
 
+library
+  exposed-modules:     Data.ITCH.Types
+                     , Data.TheBook.MarketData
+                     , Data.TheBook.OUCH
+                     , Data.TheBook.Order
+                     , Data.TheBook.Order
+  build-depends:       base >= 4 && < 5
+                     , mtl
+                     , bytestring >= 0.10
+                     , containers
+                     , binary >= 0.6.3
+                     , lens
+                     , QuickCheck
+  hs-source-dirs:      src
+  ghc-options:         -Wall -fwarn-incomplete-patterns
+
+executable thebook
+  main-is:             Data.TheBook.Main
+  build-depends:       base >= 4 && < 5
+                     , mtl
+                     , stm
+                     , random
+                     , bytestring
+                     , containers
+                     , hslogger
+                     , thebook
+  hs-source-dirs:      src
+  ghc-options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded
+
+test-suite hspec
+  build-depends:
+      base
+    , thebook
+    , tasty-quickcheck == 0.8
+    , hspec == 1.8.*
+    , HUnit == 1.2.*
+    , QuickCheck == 2.6.*
+  default-language:
+      Haskell2010
+  ghc-options:
+      -fhpc
+      -Wall
+      -Werror
+  hs-source-dirs:
+      src
+      tests
+  main-is:
+      Data.TheBook.Test
+  other-modules:
+      Data.TheBook.BookTest
+    , Data.TheBook.TypesTest
+  type:
+      exitcode-stdio-1.0
