--- a/.project-settings.yml
+++ b/.project-settings.yml
@@ -4,7 +4,7 @@ module-template: ! "------------------------------------------------------------
   MODULE_NAME where\n"
 extensions: {}
 environment: ghc-7.8-unstable
-cabal-file: project.cabal
+cabal-file: thebook.cabal
 hidden-packages: ''
 version: 1
 extra-packages: ! 'Hackage: tasty-quickcheck 0.3.1'
