--- a/thebook.cabal
+++ b/thebook.cabal
@@ -32,51 +32,55 @@ library
                      , Data.TheBook.MarketData
                      , Data.TheBook.OUCH
                      , Data.TheBook.Order
-                     , Data.TheBook.Order
+                     , Data.TheBook.Types
+                     , Data.TheBook.Book
+  default-language:    Haskell2010
   build-depends:       base >= 4 && < 5
                      , mtl
                      , bytestring >= 0.10
+                     , text
+                     , time
                      , containers
                      , binary >= 0.6.3
                      , lens
-                     , QuickCheck
+                     , QuickCheck == 2.6.*
   hs-source-dirs:      src
   ghc-options:         -Wall -fwarn-incomplete-patterns
 
 executable thebook
-  main-is:             Data.TheBook.Main
+  main-is:             Data/TheBook/Main.hs
   build-depends:       base >= 4 && < 5
                      , mtl
                      , stm
                      , random
                      , bytestring
+                     , text
+                     , time
                      , containers
                      , hslogger
                      , thebook
+                     , QuickCheck == 2.6.*
+  default-language:    Haskell2010
   hs-source-dirs:      src
   ghc-options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded
 
-test-suite hspec
-  build-depends:
-      base
-    , thebook
-    , tasty-quickcheck == 0.8
-    , hspec == 1.8.*
-    , HUnit == 1.2.*
-    , QuickCheck == 2.6.*
-  default-language:
-      Haskell2010
-  ghc-options:
-      -fhpc
-      -Wall
-      -Werror
-  hs-source-dirs:
-      src
-      tests
-  main-is:
-      Data.TheBook.Test.hs
-  other-modules:
-      Data.TheBook.BookTest
-    , Data.TheBook.TypesTest
-  type:
-      exitcode-stdio-1.0
+test-suite thebook-tests
+  main-is:            Data/TheBook/Test.hs
+  type:               exitcode-stdio-1.0
+  build-depends:      base
+                    , bytestring
+                    , thebook
+                    , containers
+                    , text
+                    , time
+                    , binary
+                    , tasty == 0.8
+                    , tasty-quickcheck == 0.8
+                    , QuickCheck == 2.6.*
+  default-language:   Haskell2010
+  ghc-options: -fhpc -Wall
+  hs-source-dirs:     tests
+  other-modules:      Data.TheBook.BookTest
+                    , Data.ITCH.TypesTest
+
+
