--- a/thebook.cabal
+++ b/thebook.cabal
@@ -64,6 +64,19 @@ executable thebook
   hs-source-dirs:      src
   ghc-options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded
 
+executable generate-itch
+  main-is:             Main.hs
+  build-depends:       base >= 4 && < 5
+                     , xml-conduit
+                     , filepath
+                     , text
+                     , bytestring
+                     , haskell-src-exts
+                     , containers
+  default-language:    Haskell2010
+  hs-source-dirs:      data
+  ghc-options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded
+
 test-suite thebook-tests
   main-is:            Data/TheBook/Test.hs
   type:               exitcode-stdio-1.0
