--- a/thebook.cabal
+++ b/thebook.cabal
@@ -73,6 +73,7 @@ executable generate-itch
                      , bytestring
                      , haskell-src-exts
                      , containers
+                     , haskell-src-exts-qq
   default-language:    Haskell2010
   hs-source-dirs:      data
   ghc-options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded
