--- a/thebook.cabal
+++ b/thebook.cabal
@@ -29,6 +29,7 @@ flag documentation
 
 library
   exposed-modules:     Data.ITCH.Types
+                     , Data.ITCH.ITCH51
                      , Data.TheBook.MarketData
                      , Data.TheBook.OUCH
                      , Data.TheBook.Order
