--- a/thebook.cabal
+++ b/thebook.cabal
@@ -13,7 +13,7 @@ copyright:          2014 Jakub Kozlowski <mail@jakub-kozlowski.com>
 maintainer:         mail@jakub-kozlowski.com
 
 build-type:         Simple
-cabal-version:      >= 1.18
+cabal-version:      >=1.9.2
 extra-source-files: LICENCE
                     README.md
 
@@ -94,7 +94,7 @@ test-suite thebook-tests
                     , tasty-quickcheck == 0.8
                     , QuickCheck == 2.6.*
   default-language:   Haskell2010
-  ghc-options: -fhpc -Wall
+  ghc-options: -Wall -O2
   hs-source-dirs:     tests
   other-modules:      Data.TheBook.BookTest
                     , Data.ITCH.TypesTest
