--- a/thebook.cabal
+++ b/thebook.cabal
@@ -85,7 +85,6 @@ test-suite thebook-tests
   type:               exitcode-stdio-1.0
   build-depends:      base
                     , bytestring
-                    , thebook
                     , containers
                     , text
                     , time
@@ -96,7 +95,7 @@ test-suite thebook-tests
                     , Cabal >= 1.9.2
   default-language:   Haskell2010
   ghc-options: -Wall -O2
-  hs-source-dirs:     tests
+  hs-source-dirs:     src, tests
   other-modules:      Data.TheBook.BookTest
                     , Data.ITCH.TypesTest
                     , Data.ITCH.ITCH51Test
