--- a/thebook.cabal
+++ b/thebook.cabal
@@ -93,6 +93,8 @@ test-suite thebook-tests
                     , tasty-quickcheck == 0.8
                     , QuickCheck == 2.6.*
                     , Cabal >= 1.9.2
+                    , Decimal
+                    , old-locale
   default-language:   Haskell2010
   ghc-options: -Wall -O2
   hs-source-dirs:     src, tests
