--- a/thebook.cabal
+++ b/thebook.cabal
@@ -63,7 +63,7 @@ executable thebook
                      , hslogger
                      , thebook
                      , QuickCheck == 2.6.*
-  default-language:    Haskell2010
+--  default-language:    Haskell2010
   hs-source-dirs:      src
   ghc-options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded
 
@@ -76,7 +76,7 @@ executable generate-itch
                      , bytestring
                      , haskell-src-exts
                      , containers
-  default-language:    Haskell2010
+--  default-language:    Haskell2010
   hs-source-dirs:      data
   ghc-options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded
 
@@ -95,8 +95,8 @@ test-suite thebook-tests
                     , Cabal >= 1.9.2
                     , Decimal
                     , old-locale
-  default-language:   Haskell2010
-  ghc-options: -Wall -O2
+--  default-language:   Haskell2010
+  Ghc-Options:        -Wall -O2 -fhpc -hpcdir dist/hpc/mix/thebook-tests
   hs-source-dirs:     src, tests
 
 
