--- a/thebook.cabal
+++ b/thebook.cabal
@@ -67,6 +67,48 @@ executable thebook
   hs-source-dirs:      src
   ghc-options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded
 
+executable thebook-demo-client
+  main-is:             Client.hs
+  build-depends:       base >= 4 && < 5
+                     , mtl
+                     , transformers
+                     , stm
+                     , binary
+                     , random
+                     , network
+                     , bytestring
+                     , text
+                     , time
+                     , containers
+                     , hslogger
+                     , conduit
+                     , network-conduit == 1.0.4
+                     , thebook
+                     , QuickCheck == 2.6.*
+  hs-source-dirs:      demo
+  ghc-options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded
+
+executable thebook-demo-server
+  main-is:             Server.hs
+  build-depends:       base >= 4 && < 5
+                     , mtl
+                     , transformers
+                     , stm
+                     , random
+                     , binary
+                     , bytestring
+                     , text
+                     , network
+                     , time
+                     , containers
+                     , hslogger
+                     , conduit
+                     , network-conduit == 1.0.4
+                     , thebook
+                     , QuickCheck == 2.6.*
+  hs-source-dirs:      demo
+  ghc-options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded
+
 executable generate-itch
   main-is:             Main.hs
   build-depends:       base >= 4 && < 5
