--- a/thebook.cabal
+++ b/thebook.cabal
@@ -82,7 +82,7 @@ executable thebook-demo-client
                      , containers
                      , hslogger
                      , conduit
-                     , network-conduit == 1.0.4
+                     , conduit-extra >= 1.1.0
                      , thebook
                      , QuickCheck == 2.6.*
   hs-source-dirs:      demo
@@ -103,7 +103,7 @@ executable thebook-demo-server
                      , containers
                      , hslogger
                      , conduit
-                     , network-conduit == 1.0.4
+                     , conduit-extra >= 1.1.0
                      , thebook
                      , QuickCheck == 2.6.*
   hs-source-dirs:      demo
