--- a/thebook.cabal
+++ b/thebook.cabal
@@ -47,7 +47,18 @@ library
                      , QuickCheck == 2.6.*
                      , Decimal
                      , old-locale
-  hs-source-dirs:      src
+                       -- Codegen deps
+                     , directory
+                     , base >= 4 && < 5
+                     , xml-conduit
+                     , filepath
+                     , text
+                     , bytestring
+                     , haskell-src-exts
+                     , containers
+                     , filepath
+                     , system-filepath
+  hs-source-dirs:      src, generated
   ghc-options:         -Wall -fwarn-incomplete-patterns
 
 executable thebook
@@ -112,13 +123,6 @@ executable thebook-demo-server
   hs-source-dirs:      demo
   ghc-options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded
 
--- executable generate-itch
---  main-is:             Main.hs
---  build-depends:       
---  default-language:    Haskell2010
---  hs-source-dirs:      data
---  ghc-options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded
-
 test-suite thebook-tests
   main-is:            Data/TheBook/Test.hs
   type:               exitcode-stdio-1.0
@@ -134,18 +138,8 @@ test-suite thebook-tests
                     , Cabal >= 1.9.2
                     , Decimal
                     , old-locale
-                    -- Codegen deps
-                    , directory
-                    , base >= 4 && < 5
-                    , xml-conduit
-                    , filepath
-                    , text
-                    , bytestring
-                    , haskell-src-exts
-                    , containers
-                    , filepath
-                    , system-filepath
+
   Ghc-Options:        -Wall -O2 -fhpc -hpcdir dist/hpc/mix/thebook-tests
-  hs-source-dirs:     src, tests
+  hs-source-dirs:     src, generated, tests
 
 
