--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,28 @@
 language: haskell
 
+env:
+  global:
+  - secure: "BACqILhpDMHms4OZglwPVO7T1fkFWipTEpf8fZ9QLooPcczCfxOd/p+e8W1TplcsT0xYF7B/SRcRZuhrBl5olOmzXVeH+nqB+572+b3Xl7xg1KZrbW/hQa9+HVLS8jzPpcm+9AcCkN67OTpEKetcIGj6t9yYiJQJZKsLxl4PVB4="
+
 before_install:
   - cabal install hpc-coveralls
   - sudo apt-get -q -y install hlint || cabal install hlint
 
 script:
-  - cabal configure --enable-tests --enable-library-coverage
+  - cabal configure --enable-tests --enable-library-coverage --enable-benchmarks
   - cabal build
   - run-cabal-test --show-details=always
-  
+  - cabal bench --benchmark-options="-o benchmarks/index.html"
+
 after_script:
   - hpc-coveralls thebook-tests
+  - git remote set-url --push origin #{repo}
+  - git config user.name '#{ENV['GIT_NAME']}'
+  - git config user.email '#{ENV['GIT_EMAIL']}'
+  - git config credential.helper "store --file=.git/credentials"
+  - echo "https://#{ENV['GH_TOKEN']}:@github.com" > .git/credentials
+  - git checkout -b gh-pages origin/gh-pages
+  - git add benchmarks/index.html
+  - git commit -m "Update benchmarks"
+  - git push origin gh-pages
+  - rm .git/credentials
