--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,11 @@ before_install:
   - sudo apt-get -q -y install hlint || cabal install hlint
 
 script:
-  - cabal configure --enable-tests --enable-library-coverage --enable-benchmarks
+  - cabal configure --enable-tests --enable-library-coverage
   - cabal build
   - run-cabal-test --show-details=always
+  - cabal configure --enable-benchmarks
+  - cabal build
   - cabal bench --benchmark-options="-o benchmarks/index.html"
 
 after_script:
