--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,13 @@ script:
   - cabal configure --enable-tests --enable-library-coverage
   - cabal build
   - run-cabal-test --show-details=always
+  - hpc-coveralls thebook-tests --exclude-dir=test,bench
   - cabal configure --enable-benchmarks
   - cabal build
   - cabal bench --benchmark-options="-o benchmarks/index.html"
 
 after_script:
-  - hpc-coveralls thebook-tests
-  - git remote set-url --push origin #{repo}
+  - git remote set-url --push origin git@github.com:jkozlowski/thebook-haskell.git
   - git config user.name '#{ENV['GIT_NAME']}'
   - git config user.email '#{ENV['GIT_EMAIL']}'
   - git config credential.helper "store --file=.git/credentials"
