--- a/thebook.cabal
+++ b/thebook.cabal
@@ -33,6 +33,7 @@ library
                     , Data.TheBook.Types
                     , Data.TheBook.Book
                     , Data.TheBook.Rule
+                    , Data.TheBook.Monad
   default-language:   Haskell2010
   build-depends:      base >= 4 && < 5
                     , mtl
