Added instances for Functor and Applicative. Added exclusions of bench/ directory when sending coverage to coveralls.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ script:
   - run-cabal-test --show-details=always
 
 after_script:
-  - hpc-coveralls --exclude-dir=tests thebook-tests
+  - hpc-coveralls --exclude-dir=tests --exclude-dir=bench thebook-tests
